fix portfolio views on mobile

--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -180,14 +180,14 @@ a {
     
     @media only screen and (max-width: 600px) {
         
-        max-width:80%;
+        max-width:100%;
         margin: auto;
-        padding: 1em;
         
         img{
             box-sizing: border-box;
-            max-width:95%;
-            border: 0 !important;
+            width: 100%;
+            max-width:100%;
+            margin:0;
         }
     }
 
@@ -789,13 +789,13 @@ iframe {
 
         @media only screen and (max-width: 800px) {
 
-            max-width: 95vv;
-            padding: 0 1.5em;
+            max-width: 100vw;
+            padding: 0 .5em;
             margin: auto;
             box-sizing: border-box;
 
-            
-            
+        
+
             .image-container {
                 margin: auto;
                 width: 90%;
@@ -811,6 +811,7 @@ iframe {
 
             li {
                 font-size: .85em;
+                width: 100%;
             }
 
             h1,
@@ -844,7 +845,7 @@ iframe {
 
             .col {
                 max-width: 100%;
-                width: 100%;
+                width: 100vv;
                 display: flex;
                 
                 p{
@@ -862,7 +863,7 @@ iframe {
                 }
 
                 .col-third {
-                    width:47%;
+                    width:48%;
                     min-width: 150px;
                 }
 
@@ -882,27 +883,26 @@ iframe {
             }
 
             p, details {
-                margin: 0;
+                margin: 0 auto;
                 font-size: 1rem;
                 line-height:1.6em;
                 margin-bottom:1em;
             }
 
             
-            
-            
             ol.feature-large,
             ul.feature-large {
             
                 max-width: 90%;
                 margin:0 auto;
+                margin-bottom: 1em;
                 padding:0;
                 
                 li {
-                    margin:0;
+                    margin:0 0 .5em 0;
                     padding:0;
+                    font-size:.85em;
                     max-width: 100%;
-                    font-size: 1em;
                 }
             }
 
